[gd_scene load_steps=30 format=2]

[ext_resource path="res://Objects/Utils/PickableObject.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Utils/Health/EnemyHealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Utils/State/StandardState.gd" type="Script" id=3]
[ext_resource path="res://Enemies/Utils/Hitbox/StandardHitbox.gd" type="Script" id=4]
[ext_resource path="res://Enemies/Utils/Physics/GhostPhysics.gd" type="Script" id=5]
[ext_resource path="res://Assets/Visual/Enemies/Ghost/Hurt/sprite_0.png" type="Texture" id=6]
[ext_resource path="res://Assets/Visual/Enemies/Ghost/Move/sprite_01.png" type="Texture" id=7]
[ext_resource path="res://Assets/Visual/Enemies/Ghost/Move/sprite_04.png" type="Texture" id=8]
[ext_resource path="res://Assets/Visual/Enemies/Ghost/Move/sprite_02.png" type="Texture" id=9]
[ext_resource path="res://Assets/Visual/Enemies/Ghost/Move/sprite_03.png" type="Texture" id=10]
[ext_resource path="res://Assets/Visual/Enemies/Ghost/Move/sprite_08.png" type="Texture" id=11]
[ext_resource path="res://Assets/Visual/Enemies/Ghost/Move/sprite_00.png" type="Texture" id=12]
[ext_resource path="res://Assets/Visual/Enemies/Ghost/Move/sprite_09.png" type="Texture" id=13]
[ext_resource path="res://Assets/Visual/Enemies/Ghost/Hurt/sprite_4.png" type="Texture" id=14]
[ext_resource path="res://Assets/Visual/Enemies/Ghost/Move/sprite_06.png" type="Texture" id=15]
[ext_resource path="res://Assets/Visual/Enemies/Ghost/Hurt/sprite_3.png" type="Texture" id=16]
[ext_resource path="res://Assets/Visual/Enemies/Ghost/Move/sprite_07.png" type="Texture" id=17]
[ext_resource path="res://Assets/Visual/Enemies/Ghost/Move/sprite_05.png" type="Texture" id=18]
[ext_resource path="res://Assets/Visual/Enemies/Ghost/Death/sprite_0.png" type="Texture" id=19]
[ext_resource path="res://Assets/Visual/Enemies/Ghost/Death/sprite_1.png" type="Texture" id=20]
[ext_resource path="res://Assets/Visual/Enemies/Ghost/Hurt/sprite_2.png" type="Texture" id=21]
[ext_resource path="res://Enemies/EnemyList/Ghost/Ghost.gd" type="Script" id=22]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[sub_resource type="Animation" id=2]
resource_name = "attack"

[sub_resource type="Animation" id=3]
resource_name = "death"
length = 0.375
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3 ),
"transitions": PoolRealArray( 1, 1, 2.73208, 1, 1 ),
"update": 1,
"values": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 20 ), null ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../StandardState")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.375 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_pickable_object"
}, {
"args": [  ],
"method": "die"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../StandardHitbox/HitBox/HitBoxShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "hurt"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 21 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../StandardState")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_state_move"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../StandardHitbox/HitBox/HitBoxShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "move"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 12 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 11 ), ExtResource( 13 ) ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 15.0

[sub_resource type="CircleShape2D" id=7]
radius = 17.0

[node name="Ghost" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
z_index = 1
collision_layer = 0
collision_mask = 0
script = ExtResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
disabled = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
process_parent = true
physics_process_parent = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/attack = SubResource( 2 )
anims/death = SubResource( 3 )
anims/hurt = SubResource( 4 )
anims/move = SubResource( 5 )

[node name="StandardState" type="Node" parent="."]
script = ExtResource( 3 )
_max_hp = 18

[node name="GhostPhysics" type="Node2D" parent="."]
script = ExtResource( 5 )
_MAX_WALK_FORCE = 15
_WALK_FORCE = 15
_STOP_FORCE = 4

[node name="StandardHitbox" type="Node2D" parent="."]
visible = false
script = ExtResource( 4 )

[node name="HitBox" type="Area2D" parent="StandardHitbox"]
monitorable = false
collision_layer = 4
collision_mask = 0

[node name="HitBoxShape" type="CollisionShape2D" parent="StandardHitbox/HitBox"]
shape = SubResource( 6 )

[node name="HurtBox" type="Area2D" parent="StandardHitbox"]
monitorable = false
collision_layer = 16
collision_mask = 0

[node name="HurtBoxShape" type="CollisionShape2D" parent="StandardHitbox/HurtBox"]
shape = SubResource( 7 )

[node name="PickableObject" parent="." instance=ExtResource( 1 )]

[node name="EnemyHealthBar" parent="." instance=ExtResource( 2 )]
margin_left = -15.2028
margin_top = -18.7383
margin_right = 14.7972
margin_bottom = -13.7383

[connection signal="area_entered" from="StandardHitbox/HitBox" to="StandardHitbox" method="on_hitbox_entered"]
[connection signal="area_entered" from="StandardHitbox/HurtBox" to="StandardHitbox" method="on_hurtbox_entered"]
